--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -1,6 +1,10 @@
 % shorthand: paper-specific shorthand
 \newcommand{\alltrue}{\mathsf{AllTrue}}
 
+\newcommand{\andsub}{\mathsf{AndSub}}
+
+\newcommand{\antichains}[2]{\mathsf{AntiChains}[ #1, #2 ]}
+
 \newcommand{\apps}[1]{\mathsf{Apps}_{#1}}
 
 \newcommand{\appsof}[1]{\mathsf{Apps}[ #1 ]}
@@ -36,6 +40,8 @@
 \newcommand{\clauses}[1]{\mathsf{Clauses}[ #1 ]}
 
 \newcommand{\const}{\mathsf{Const}}
+
+\newcommand{\ctrclause}[1]{\mathsf{Ctr}[ #1 ]}
 
 \newcommand{\ctrof}[1]{\mathsf{Ctr}[#1]}
 
@@ -141,6 +147,12 @@
 
 \newcommand{\orgexprs}{\mathsf{Orgs}}
 
+\newcommand{\orsub}{\mathsf{OrSub}}
+
+\newcommand{\renameclauses}[3]{\mathsf{Rename}[ #1, #2, #3 ]}
+
+\newcommand{\renamesub}[4]{\mathsf{Rename}[ #1, #2, #3, #4 ]}
+
 \newcommand{\subtype}{\preceq}
 
 \newcommand{\prevrule}[1]{\mathsf{Prev}[ #1 ]}
@@ -166,6 +178,8 @@
 \newcommand{\reltypespos}[3]{\mathsf{RelTypes}[ #1, #2, #3 ]}
 
 \newcommand{\reltypestypes}[1]{\mathsf{RelTypes}[ #1 ]}
+
+\newcommand{\resvar}[1]{\nu[ #1 ]}
 
 \newcommand{\rulexts}{\mathsf{RuleExts}}
 
@@ -200,6 +214,8 @@
 \newcommand{\subexpseqrels}[2]{\mathsf{SubExpsRels}[ #1, #2 ]}
 
 \newcommand{\subexpseqs}{\mathsf{ExpSeqs}}
+
+\newcommand{\symrelpreds}[1]{\mathsf{RelPreds}[ #1 ]}
 
 \newcommand{\symrels}[2]{\mathsf{SymRels}[ #1, #2 ]}
 
