--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -11,6 +11,8 @@
 
 \newcommand{\argsof}[1]{\mathsf{Args}[ #1 ]}
 
+\newcommand{\argnum}{\mathsf{NumArgs}}
+
 \newcommand{\argtype}{\mathsf{ArgType}}
 
 \newcommand{\arityof}[1]{\mathsf{Arity}_{#1}}
@@ -41,7 +43,7 @@
 
 \newcommand{\const}{\mathsf{Const}}
 
-\newcommand{\ctrclause}[1]{\mathsf{Ctr}[ #1 ]}
+\newcommand{\ctrclause}[3]{ #1 \bowtie #2 \preceq #3 }
 
 \newcommand{\ctrof}[1]{\mathsf{Ctr}[#1]}
 
@@ -87,6 +89,8 @@
 
 \newcommand{\expseqrel}[2]{\mathsf{ExpSeqRel}[ #1, #2 ]}
 
+\newcommand{\firstarg}[1]{\mathsf{First}}
+
 \newcommand{\fix}[2]{\cc{fix}\ #1\ #2}
 
 \newcommand{\fixexpr}[1]{ \mathsf{FixExpr}[ #1 ] }
@@ -128,6 +132,8 @@
 \newcommand{\isvalidcex}{\textsc{IsValidCex}\xspace}
 
 \newcommand{\ite}[3]{\cc{if}\ #1\ \cc{then}\ #2\ \cc{else}\ #3}
+
+\newcommand{\joinctr}{\bowtie}
 
 \newcommand{\judges}{\vdash}
 
@@ -251,7 +257,7 @@
 
 \newcommand{\verifyaux}{\textsc{VAux}\xspace}
 
-\newcommand{\verifyunfoldings}{\textsc{VerifyUnfoldings}\xspace}
+\newcommand{\verifybnd}{\textsc{VerifyBnd}\xspace}
 
 \newcommand{\verifyunfoldingsaux}{\textsc{VerifyUnfoldings}'\xspace}
 
