--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -133,6 +133,8 @@
 
 \newcommand{\ite}[3]{\cc{if}\ #1\ \cc{then}\ #2\ \cc{else}\ #3}
 
+\newcommand{\itectr}[3]{\mathsf{ITE}(#1, #2, #3)}
+
 \newcommand{\joinctr}{\bowtie}
 
 \newcommand{\judges}{\vdash}
