--- a/draft/std.tex
+++ b/draft/std.tex
@@ -47,6 +47,8 @@
 
 \newcommand{\none}{\mathsf{None}}
 
+\newcommand{\param}[1]{\mathsf{Param}[ #1 ]}
+
 \newcommand{\partto}{\hookrightarrow}
 
 \newcommand{\pset}{\mathcal{P}}
